# old_blog_phenomic

./: .gitignore  404.html  CNAME  archives.html  atom.rss  atom.xml  authors.html  bayesian-hierarchical-models.html  categories.html  fabfile.py  feed.xml  index.html  index.html.a9f9154f1f41a80a92fe2187b567b33a.json  index2.html  pelicanconf.py  phenomic.browser.33704cfe8247d9bb8f33.js  phenomic.browser.4bec32a5f97cd46eb8eb.js  phenomic.browser.6e41be49a31785735e7c.js  phenomic.browser.f03920f4354222b68ad9.js  rss.xml  sitemap.xml  stochastic-processes-as-monad-transformers.html  tags.html
about/: index.html  index.html.dee8b5bc97512cbc60dbc7e12ba2f7c4.json  index.html.fc6effbd7e83fa4f076ad05136ed6eca.json
author/: rafael-s-calsaverini.html  rafael-s-calsaverini2.html
blog-builder/: blog-builder.cabal  index.html
blog-builder/css/: style.css
blog-builder/posts/: 2010-08-03-stochastic-processes.md  2010-08-26-operational-semantics.md  2015-08-03-stochastic-processes.md  2016-10-02-haskell-architecture.md
blog-builder/src/: Main.hs
blog-builder/src/Blog/: Compilers.hs  Context.hs  Rules.hs
blog-builder/src/Data/: Blog.hs
blog-builder/templates/: default.html  post.html
category/: bayesian-modelling.html  haskell.html  haskell2.html
content/: bayesian_hierarchical.mdk  bayesian_hierarchical.scholmd  stochastic_processes.mdk  stochastic_processes.scholmd
css/: style.css
feeds/: all-en.atom.xml  all.atom.xml  bayesian-modelling.atom.xml  haskell.atom.xml  rafael-s-calsaverini.atom.xml  rafael-s-calsaverini.rss.xml
output/: archives.html  atom.rss  (+6 more)
(+55 files in other folders)
