name:                blog-builder
version:             0.1.0.0
synopsis:            My Hakyll Blog.
description:         Please see README.md
homepage:            https://github.com/rcalsaverini/rcalsaverini.github.io
license:             BSD3
license-file:        LICENSE
author:              Rafael S.  Calsaverini
maintainer:          rafael.calsaverini@gmail.com
copyright:           Rafael S.  Calsaverini
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blog.Rules
                     , Blog.Compilers
                     , Blog.Context
  build-depends:       base >= 4.7 && < 5
                     , hakyll == 4.8.3.2
                     , pandoc == 1.17.1
                     , filepath == 1.4.0.0
  default-language:    Haskell2010

executable site
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll == 4.8.3.2
                     , pandoc == 1.17.1
                     , blog-builder
                     , filepath == 1.4.0.0
  default-language:    Haskell2010
